--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,12 +7,12 @@ plugins {
 
 android {
     namespace 'com.dev.weathernews'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.dev.weathernews"
         minSdk 26
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -80,9 +80,15 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2"
 
     //room
-    def room_version = "2.6.0-alpha01"
+    def room_version = "2.6.0-alpha02"
 
     implementation "androidx.room:room-ktx:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
+
+    // Location Services
+    implementation 'com.google.android.gms:play-services-location:20.0.0'
+
+    //material icons
+    implementation "androidx.compose.material:material-icons-extended:1.4.3"
 }
